使用 Colab 创建而成

--- a/Problemset-week2_Working_with_Data_in_Pandas.ipynb
+++ b/Problemset-week2_Working_with_Data_in_Pandas.ipynb
@@ -6869,9 +6869,9 @@
         "df.columns = df.columns.str.replace(\"\\[.*?\\]\", \"\", regex=True)\n",
         "\n",
         "\n",
-        "clean = df[\"Per 100,000 inhabitants\"].astype(str)\n",
-        "clean = clean.replace(',', '', regex=True)\n",
-        "clean = clean.replace('-', 'NaN', regex=True).astype('float')\n",
+        "cleaned = df[\"Per 100,000 inhabitants\"].astype(str)\n",
+        "cleaned = cleaned.replace(',', '', regex=True)\n",
+        "cleaned = cleaned.replace('-', 'NaN', regex=True).astype('float')\n",
         "\n",
         "print(clean)\n",
         "\n",
@@ -6892,13 +6892,13 @@
         "print(\"Average road fatalities per 100,000 inhabitants in Asia (2019):\" ,asia_mean )"
       ],
       "metadata": {
-        "id": "jnHdEnF5dUmn",
-        "outputId": "40581bac-6670-4415-cbda-327a5f3e41b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jnHdEnF5dUmn",
+        "outputId": "0b505439-ca4d-405b-b903-fff5a65f0ee1"
       },
-      "execution_count": 38,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -6908,9 +6908,9 @@
             "<>:31: SyntaxWarning: invalid escape sequence '\\['\n",
             "<>:18: SyntaxWarning: invalid escape sequence '\\['\n",
             "<>:31: SyntaxWarning: invalid escape sequence '\\['\n",
-            "/tmp/ipython-input-1745223604.py:18: SyntaxWarning: invalid escape sequence '\\['\n",
+            "/tmp/ipython-input-823448979.py:18: SyntaxWarning: invalid escape sequence '\\['\n",
             "  df.columns = df.columns.str.replace(\"\\[.*?\\]\", \"\", regex=True)\n",
-            "/tmp/ipython-input-1745223604.py:31: SyntaxWarning: invalid escape sequence '\\['\n",
+            "/tmp/ipython-input-823448979.py:31: SyntaxWarning: invalid escape sequence '\\['\n",
             "  df[\"Date\"] = clean_year.str.replace(\"\\[.*?\\]\", \"\", regex=True)\n"
           ]
         },
